--- a/src/Components/NewCollections/NewCollections.css
+++ b/src/Components/NewCollections/NewCollections.css
@@ -4,6 +4,7 @@
   align-items: center;
   gap: 10px;
   margin-bottom: 100px;
+  padding: 50px 5%;
 }
 
 .new-collections h1 {
@@ -21,7 +22,71 @@
 
 .collections {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
   margin-top: 50px;
   gap: 30px;
+  width: 100%;
+}
+
+/* Responsive Design */
+@media (max-width: 1200px) {
+  .new-collections {
+    padding: 50px 3%;
+  }
+  
+  .new-collections h1 {
+    font-size: 45px;
+  }
+  
+  .collections {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 25px;
+  }
+}
+
+@media (max-width: 900px) {
+  .new-collections h1 {
+    font-size: 40px;
+  }
+  
+  .collections {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    margin-top: 30px;
+  }
+}
+
+@media (max-width: 600px) {
+  .new-collections {
+    padding: 30px 4%;
+    margin-bottom: 50px;
+  }
+  
+  .new-collections h1 {
+    font-size: 35px;
+  }
+  
+  .new-collections hr {
+    width: 150px;
+  }
+  
+  .collections {
+    grid-template-columns: 1fr;
+    gap: 15px;
+    margin-top: 20px;
+  }
+}
+
+@media (max-width: 480px) {
+  .new-collections h1 {
+    font-size: 30px;
+  }
+  
+  .new-collections hr {
+    width: 120px;
+  }
+  
+  .collections {
+    gap: 10px;
+  }
 }
